--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "leaflet": "^1.7.1",
+    "mapbox-gl": "^2.7.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-leaflet": "^3.2.5",
+    "react-mapbox-gl": "^5.1.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
